--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </ul>
       <h3>Contact Me</h3>
       <p><strong>Phone:</strong> (345) 983-1571</p>
-      <p>Email: <a href="mailto:brandi@email.com">brandi@email.com</a></p>
+      <p>Email: <a href="mailto:its@email.com">its@email.com</a></p>
     </div>
     <!-- 
       Directions:
